# app/Http/Controllers/UserController.php
@@ -8,11 +8,65 @@ use Laravel\Sanctum\PersonalAccessToken;
 
 class UserController extends Controller
 {
+    /**
+     * @OA\GET(
+     *     path="/info",
+     *     summary="Информация об пользователе",
+     *     tags={"Аунтификация"},
+     *     @OA\Parameter(
+     *          name="Authorization",
+     *          in="header",
+     *          required=true,
+     *          description="Bearer Token",
+     *          @OA\Schema(type="string", example="Bearer 1|pVEhLK1z9QCN6CSn5FG5djNqiWC6XZc1zoeDfMLE375c7750")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="id", type="int", example="1"),
+     *              @OA\Property(property="name", type="string", example="test"),
+     *              @OA\Property(property="email", type="string", example="test@test.ru"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Authentication Error",
+     *          @OA\JsonContent(ref="#/components/schemas/AuthenticationErrorResponse")
+     *      )
+     * )
+     */
     public function info()
     {
-        return request()->user();
+        return request()->user()->only([
+            'id',
+            'name',
+            'email'
+        ]);
     }
 
+    /**
+     * @OA\GET(
+     *     path="/check",
+     *     summary="Проверка авторизации пользователя",
+     *     tags={"Аунтификация"},
+     *     @OA\Parameter(
+     *          name="Authorization",
+     *          in="header",
+     *          required=false,
+     *          description="Bearer Token",
+     *          @OA\Schema(type="string", example="Bearer 1|pVEhLK1z9QCN6CSn5FG5djNqiWC6XZc1zoeDfMLE375c7750")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="status", type="bool", example="true"),
+     *              @OA\Property(property="authenticated", type="bool", example="true"),
+     *          )
+     *      )
+     * )
+     */
     public function check(Request $request)
     {
         $token = $request->bearerToken();
